# destiny-repository

./: pyproject.toml
app/static/: evrepo-core-shapes.ttl
app/system/: healthcheck.py  routes.py
docs/procedures/: oauth.rst
infra/app/: .terraform.lock.hcl  auth.tf  auth_v2.tf  frontdoor.tf  github_actions.tf  main.tf  outputs.tf  terraform.tf  variables.tf
tests/e2e/: conftest.py
tests/routers/: test_system.py
