[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
    "destiny-sdk",
    "faker>=40.1",
    "msal>=1.31.1,<2",
    "mypy>=1.14.1,<2",
    "opentelemetry-instrumentation-aio-pika>=0.60b1,<0.61",
    "pre-commit>=4.2.0,<5",
    "psycopg>=3.2.6,<4",
    "pytest-asyncio>=1.0.0,<2",
    "pytest-cov>=6.2.1",
    "pytest-httpx>=0.35.0,<0.36",
    "pytest>=8.3.4,<9",
    "ruff>=0.8.6,<0.9",
    "types-cachetools>=5.5.0.20240820,<6",
    "types-python-jose>=3.4.0.20250224,<4",
    "vulture>=2.14",
]
docs = [
    "autodoc_pydantic[erdantic]>=2.2.0,<3",
    "pydata-sphinx-theme>=0.16.1,<0.17",
    "sphinx>=8.2.3,<9",
    "sphinxcontrib-mermaid>=1.0.0,<2",
]
test = [
    "aiohttp>=3.13.5",
    "factory-boy>=3.3.3",
    "httpx>=0.28.1,<0.29",
    "psycopg>=3.2.6,<4",
    "pytest-env>=1.1.5,<2",
    "pytest-order>=1.3.0,<2",
    "pytest>=8.3.4,<9",
    "testcontainers[elasticsearch,minio,postgres,rabbitmq]>=4.14",
]

[project]
authors = [
    {email = "adam@futureevidence.org", name = "Adam Hamilton"},
    {email = "andrew@futureevidence.org", name = "Andrew Harvey"},
    {email = "daniel@futureevidence.org", name = "Daniel Breves"},
    {email = "h.moss@ucl.ac.uk", name = "Harry Moss"},
    {email = "jack@futureevidence.org", name = "Jack Walmisley"},
]
dependencies = [
    "alembic>=1.16.1,<2",
    "asyncpg>=0.30.0,<0.31",
    "azure-identity>=1.21.0,<2",
    "azure-servicebus>=7.14.2,<8",
    "azure-storage-blob>=12.25.1,<13",
    "cachetools>=5.5.2,<6",
    "destiny-sdk",
    "elasticsearch[async]>=9.1.2,<9.2",
    "fastapi[standard]>=0.128,<0.129",
    "frozenlist==1.6.0",
    "greenlet>=3.1.1,<4",
    "joserfc>=1.0.0",
    "minio>=7.2.15,<8",
    "opentelemetry-distro>=0.60b1,<0.61",
    "opentelemetry-exporter-otlp>=1.39.1,<2",
    "opentelemetry-instrumentation-asyncio>=0.60b1,<0.61",
    "opentelemetry-instrumentation-fastapi>=0.60b1,<0.61",
    "opentelemetry-instrumentation-httpx>=0.60b1,<0.61",
    "opentelemetry-instrumentation-logging>=0.60b1,<0.61",
    "opentelemetry-instrumentation-sqlalchemy>=0.60b1,<0.61",
    "pydantic-settings>=2.7.1,<3",
    "pydantic>=2.12.5",
    "pyld>=2.0.4,<3",
    "pyshacl>=0.30.0,<1",
    "python-jose[cryptography]>=3.5.0,<4",
    "rdflib>=7.0.0,<8",
    "sqlalchemy-utils>=0.41.2,<0.42",
    "structlog>=25.1.0,<26",
    "taskiq-aio-pika>=0.4.1,<0.5",
    "taskiq[reload]>=0.12.1",
    "tenacity>=9.1.2",
    "uvloop>=0.22.0",
]
description = ""
license = "AGPL-3.0-or-later"
name = "destiny-repository"
readme = "README.md"
requires-python = ">=3.14, <3.15"
version = "2.0.0"

[tool.mypy]
explicit_package_bases = true
namespace_packages = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = ["--color=yes", "--import-mode=importlib", "--verbose"]
env = ["AUTH_PROVIDER=azure", "ENV=test"]
filterwarnings = [
    # Can be removed when https://github.com/testcontainers/testcontainers-python/issues/874 is complete
    "ignore:^The @wait_container_is_ready decorator:DeprecationWarning",
    # Tasks API in technical preview but has been present for 5 major versions
    # https://www.elastic.co/docs/api/doc/elasticsearch/operation/operation-tasks-get
    "ignore:^This API is in technical preview and may be changed or removed in a future release.",
]
norecursedirs = ["tests/e2e"]
pythonpath = "."
testpaths = ["libs/ad_hoc/tests", "libs/sdk/tests", "tests"]

[tool.ruff]
extend-exclude = ["app/migrations/versions/*.py", "docs/*.py"]
fix = true
force-exclude = true
target-version = "py312"
lint.ignore = [
    "COM812", # trailing commas (ruff-format recommended)
    "D203", # no-blank-line-before-class
    "D212", # multi-line-summary-first-line
    "D407", # removed dashes lines under sections
    "D417", # argument description in docstring (unreliable)
    "FIX002", # implicit trust that TODOs are not trivial, or else they would be fixed
    "ISC001", # simplify implicit str concatenation (ruff-format recommended)
]
lint.per-file-ignores = {"*tests*" = [
    "ANN201", # No return type annotation. It's always None for tests.
    "INP001", # File is part of an implicit namespace package.
    "PLR2004", # Magic value used in comparison
    "S101", # Use of `assert` detected
    "S105", # hardcoded tokens
    "S106", # hardcoded passwords
], "*tests/unit*" = [
    "A002", # Mocking pydantic classes with built in classes causes shadows
    "ANN", # Relax type hinting constraints in unit tests
    "ARG002", # Unused arguments sometimes required for mocking
    "D", # Relax documentation constraints in unit tests
    "PLR0913", # Mocking pydantic classes can require many arguments
], "app/domain/*/routes.py" = [
    "PLR0913", # Dependencies create large function signatures
], "app/migrations/env.py" = [
    "F401", # imported but not used
], "libs/samples*" = [
    "INP001", # Standalone scripts, not a module
]}
lint.select = ["ALL"]
lint.mccabe.max-complexity = 18
lint.pep8-naming.classmethod-decorators = ["classmethod"]

[tool.tomlsort]
all = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
overrides."project.classifiers".inline_arrays = false
overrides."tool.coverage.paths.source".inline_arrays = false

[tool.uv]
default-groups = [
    "dev",
    "test",
]
exclude-dependencies = [
    "ecdsa", # Required until https://github.com/mpdavis/python-jose/issues/390 is resolved
]
package = false

[tool.uv.sources]
destiny-sdk = {editable = true, path = "libs/sdk"}

[tool.vulture]
exclude = ["app/migrations/"]
ignore_decorators = ["@*.get", "@*.post", "@*.put"]
make_whitelist = true
min_confidence = 70
paths = ["app/", "libs/sdk/src/"]
sort_by_size = true
